Fix long commit message overflowing. Fixes #312

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -351,6 +351,7 @@ body {
 						overflow:auto;
 						white-space: inherit;
 						display: inline;
+						word-break: break-all;
 					}
 				}
 			}
@@ -381,7 +382,6 @@ body {
 					overflow:hidden;
 					white-space: nowrap;
 					text-overflow: ellipsis;
-					width: 340px;
 					display: block;
 				}
 
